--- a/index.html
+++ b/index.html
@@ -1,222 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/003da4fba2.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <title>Inicio</title>
-  </head>
 
-  <body class="d-flex flex-column min-vh-100">
-    <header class="bg-light flex-shrink-0">
-      <nav class="navbar fixed-top navbar-expand-lg navegador">
-        <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJlJMX9lurbynhcPqg2OjatNxA9mADuXbcNw&s"
-              alt="logo empresa"
-            />
-          </a>
-          <!-- Boton hamburguesa -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Cuerpo offcanvas -->
-          <div
-            class="offcanvas offcanvas-end"
-            tabindex="-1"
-            id="offcanvasNavbar"
-            aria-labelledby="offcanvasNavbarLabel"
-          >
-            <div class="offcanvas-header">
-              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h3>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="offcanvas"
-                aria-label="Close"
-              ></button>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/003da4fba2.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Inicio</title>
+</head>
 
-            <div class="offcanvas-body encabezado-offcanvas">
-              <ul class="navbar-nav flex-grow-1 pe-3 menu-offcanvas">
-                <li class="nav-item actual_page">
-                  <a class="nav-link active" href="#">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/sobre_nosotros.html"
-                    >SOBRE NOSOTROS</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/productos.html"
-                    >PRODUCTOS</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/contactanos.html"
-                    >CONTÁCTANOS</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/carrito.html"
-                    ><i class="fa-solid fa-cart-shopping"></i> CARRITO</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main class="d-flex flex-column flex-fill">
-      <section id="fondo_index">
-        <h1>Nombre Empresa</h1>
-        <h4 class="index_text">
-          Sollicitant homines non sunt nisi quam formae rerum principiis
-          opiniones. Mors enim est terribilis ut Socrati aliud esse apparet. Sed
-          timor mortis est notio terribile. Cum igitur impediantur turbentur aut
-          dolere videamus aliis non tribuunt nisi nobis hoc est, in principiis
-        </h4>
-
-        <button
-          type="button"
-          onclick="document.location='./pages/productos.html'"
-          class="btn btn-primary"
-        >
-          COMPRA AHORA
+<body class="d-flex flex-column min-vh-100">
+  <header class="bg-light flex-shrink-0">
+    <nav class="navbar fixed-top navbar-expand-lg navegador">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="#">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJlJMX9lurbynhcPqg2OjatNxA9mADuXbcNw&s"
+            alt="logo empresa" />
+        </a>
+        <!-- Boton hamburguesa -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-      </section>
-      <section class="section_main m-3">
-        <h3>NUESTROS MEJORES PRODUCTOS</h3>
-        <hr />
-        <div class="row row-cols-1 row-cols-sm-4 g-3">
-          <div class="col">
-            <div class="card">
-              <img
-                src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
-                class="card-img-top"
-                alt="card-grid-image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Quando ambulabat agendis admonere te qualis actio. Si ad
-                  corpus, quae
-                </p>
-                <a href="#" class="btn btn-primary">Conoce más</a>
-              </div>
-            </div>
+        <!-- Cuerpo offcanvas -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h3 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h3>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
-          <div class="col">
-            <div class="card">
-              <img
-                src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
-                class="card-img-top"
-                alt="card-grid-image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Quando ambulabat agendis admonere te qualis actio. Si ad
-                  corpus, quae
-                </p>
-                <a href="#" class="btn btn-primary">Conoce más</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img
-                src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
-                class="card-img-top"
-                alt="card-grid-image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Quando ambulabat agendis admonere te qualis actio. Si ad
-                  corpus, quae
-                </p>
-                <a href="#" class="btn btn-primary">Conoce más</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img
-                src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
-                class="card-img-top"
-                alt="card-grid-image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Quando ambulabat agendis admonere te qualis actio. Si ad
-                  corpus, quae
-                </p>
-                <a href="#" class="btn btn-primary">Conoce más</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section_ubicacion p-1 m-3">
-        <h3>ENCUÉNTRANOS EN:</h3>
-        <div class="row ubicacion me-auto">
-          <iframe
-            src="https://www.w3schools.com"
-            height="400"
-            title="Ubicacion"
-            class="col-12 col-md-8"
-          ></iframe>
 
-          <div class="col-1">
-            <i class="fa-solid fa-location-dot fa-2xl"></i>
-          </div>
-          <div class="col-11 col-md-3">
-            <p>
-              Quando ambulabat agendis admonere te qualis actio. Si ad corpus,
-              quae
-            </p>
+          <div class="offcanvas-body encabezado-offcanvas">
+            <ul class="navbar-nav flex-grow-1 pe-3 menu-offcanvas">
+              <li class="nav-item actual_page">
+                <a class="nav-link active" href="#">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/sobre_nosotros.html">SOBRE NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/productos.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contactanos.html">CONTÁCTANOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i> CARRITO</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </section>
-    </main>
-    <footer class="flex-shrink-0 sticky-bottom p-3">
+      </div>
+    </nav>
+  </header>
+  <main class="d-flex flex-column flex-fill">
+    <section id="fondo_index">
+      <h1>Nombre Empresa</h1>
+      <h4 class="index_text">
+        Sollicitant homines non sunt nisi quam formae rerum principiis
+        opiniones. Mors enim est terribilis ut Socrati aliud esse apparet. Sed
+        timor mortis est notio terribile. Cum igitur impediantur turbentur aut
+        dolere videamus aliis non tribuunt nisi nobis hoc est, in principiis
+      </h4>
+
+      <button type="button" class="btn btn-primary">
+        COMPRA AHORA
+      </button>
+    </section>
+    <section class="section_main m-3">
+      <h3>NUESTROS MEJORES PRODUCTOS</h3>
+      <hr />
+      <div class="row row-cols-1 row-cols-sm-4 g-3">
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
+              class="card-img-top" alt="card_best_product_1" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Quando ambulabat agendis admonere te qualis actio. Si ad
+                corpus, quae
+              </p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
+              class="card-img-top" alt="card_best_product_2" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Quando ambulabat agendis admonere te qualis actio. Si ad
+                corpus, quae
+              </p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
+              class="card-img-top" alt="card_best_product_3" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Quando ambulabat agendis admonere te qualis actio. Si ad
+                corpus, quae
+              </p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://thumbs.dreamstime.com/b/dibujo-de-icono-caricatura-caja-concepto-producto-o-maquinaria-listo-para-ser-entregado-al-cliente-simple-157425701.jpg"
+              class="card-img-top" alt="card_best_product_4" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Quando ambulabat agendis admonere te qualis actio. Si ad
+                corpus, quae
+              </p>
+              <a href="#" class="btn btn-primary">Conoce más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section class="section_ubicacion p-1 m-3">
+      <h3>ENCUÉNTRANOS EN:</h3>
+      <div class="row ubicacion me-auto">
+        <iframe src="https://www.google.com/maps" height="400" title="Ubicacion" class="col-12 col-md-8"></iframe>
+
+        <div class="col-2 col-md-1 ubicacion-i">
+          <i class="fa-solid fa-location-dot fa-2xl"></i>
+        </div>
+        <div class="col-10 col-md-3">
+          <p>
+            Quando ambulabat agendis admonere te qualis actio. Si ad corpus,
+            quae
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="flex-shrink-0 sticky-bottom p-3">
+    <div class="footer">
       <h4>SÍGUENOS EN</h4>
       <div class="redes_sociales">
-        <a href="https://www.facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook fa-2xl m-3"></i
-        ></a>
-        <a href="https://www.instagram.com" target="_blank"
-          ><i class="fa-brands fa-instagram fa-2xl m-3"></i
-        ></a>
+        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl m-3"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl m-3"></i></a>
       </div>
-    </footer>
+    </div>
 
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
