--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,135 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/003da4fba2.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-    <title>Contáctanos</title>
-  </head>
-  <body class="d-flex flex-column min-vh-100">
-    <header class="bg-light flex-shrink-0">
-      <nav class="navbar fixed-top navbar-expand-lg navegador">
-        <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJlJMX9lurbynhcPqg2OjatNxA9mADuXbcNw&s"
-              alt="logo empresa"
-            />
-          </a>
-          <!-- Boton hamburguesa -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Cuerpo offcanvas -->
-          <div
-            class="offcanvas offcanvas-end"
-            tabindex="-1"
-            id="offcanvasNavbar"
-            aria-labelledby="offcanvasNavbarLabel"
-          >
-            <div class="offcanvas-header">
-              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h3>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="offcanvas"
-                aria-label="Close"
-              ></button>
-            </div>
 
-            <div class="offcanvas-body encabezado-offcanvas">
-              <ul class="navbar-nav flex-grow-1 pe-3 menu-offcanvas">
-                <li class="nav-item actual_page">
-                  <a class="nav-link" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./sobre_nosotros.html"
-                    >SOBRE NOSOTROS</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./productos.html">PRODUCTOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">CONTÁCTANOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./carrito.html"
-                    ><i class="fa-solid fa-cart-shopping"></i> CARRITO</a
-                  >
-                </li>
-              </ul>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/003da4fba2.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Contáctanos</title>
+</head>
+
+<body class="d-flex flex-column min-vh-100">
+  <header class="bg-light flex-shrink-0">
+    <nav class="navbar fixed-top navbar-expand-lg navegador">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="#">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJlJMX9lurbynhcPqg2OjatNxA9mADuXbcNw&s"
+            alt="logo empresa" />
+        </a>
+        <!-- Boton hamburguesa -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Cuerpo offcanvas -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h3 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h3>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+
+          <div class="offcanvas-body encabezado-offcanvas">
+            <ul class="navbar-nav flex-grow-1 pe-3 menu-offcanvas">
+              <li class="nav-item actual_page">
+                <a class="nav-link" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./sobre_nosotros.html">SOBRE NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">CONTÁCTANOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./carrito.html"><i class="fa-solid fa-cart-shopping"></i> CARRITO</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </nav>
-    </header>
-    <main class="d-flex flex-column flex-fill">
-      <section id="fondo_heading">
-        <h1 class="heading_text">CONTÁCTANOS</h1>
-      </section>
+      </div>
+    </nav>
+  </header>
+  <main class="d-flex flex-column flex-fill">
+    <section id="fondo_heading">
+      <h1 class="heading_text">CONTÁCTANOS</h1>
+    </section>
 
-      <section class="contactanos_formulario">
-        <form
-          class="row g-3 needs-validation"
-          action="#"
-          method="post"
-          enctype="application/x-www-form-urlencoded"
-        >
-          <div class="mb-3">
-            <label class="form-label" for="nombre_completo">Nombre completo</label>
-            <input  class="form-control" type="text" name="nombre_completo" id="nombre_completo" />
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="email">Correo electrónico</label>
-            <input  class="form-control" type="email" name="email" id="email" />
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="mensaje">Mensaje</label>
-            <textarea class="form-control" 
-              name="mensaje"
-              id="mensaje"
-              rows="10"
-            ></textarea>
-          </div>
+    <section class="contactanos_formulario">
+      <form class="row g-3 needs-validation" action="#" method="post" enctype="application/x-www-form-urlencoded">
+        <div class="mb-3">
+          <label class="form-label" for="nombre_completo">Nombre completo</label>
+          <input class="form-control" type="text" name="nombre_completo" id="nombre_completo" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="email">Correo electrónico</label>
+          <input class="form-control" type="email" name="email" id="email" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="mensaje">Mensaje</label>
+          <textarea class="form-control" name="mensaje" id="mensaje" rows="10"></textarea>
+        </div>
 
-          <button type="submit" class="boton col-2 offset-10">Enviar</button>
-        </form>
-      </section>
-    </main>
-    <footer class="flex-shrink-0 sticky-bottom p-3">
+        <button type="submit" class="boton col-2 offset-10">Enviar</button>
+      </form>
+    </section>
+  </main>
+  <footer class="flex-shrink-0 sticky-bottom p-3">
+    <div class="footer">
       <h4>SÍGUENOS EN</h4>
       <div class="redes_sociales">
-        <a href="https://www.facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook fa-2xl m-3"></i
-        ></a>
-        <a href="https://www.instagram.com" target="_blank"
-          ><i class="fa-brands fa-instagram fa-2xl m-3"></i
-        ></a>
+        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook fa-2xl m-3"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl m-3"></i></a>
       </div>
-    </footer>
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </div>
+
+  </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
