modificacion de productos para correcta navegacion

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="./contactanos.html">CONTÁCTANOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i> CARRITO</a>
+                <a class="nav-link" href="./carrito.html"><i class="fa-solid fa-cart-shopping"></i> CARRITO</a>
               </li>
             </ul>
           </div>
