--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -8,31 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <meta name="description" content="Conoce el objetivo, principios y equipo de la empresa dormir con estilo">
+    <meta name="keywords" content="ropa dormir comoda, pijamas, pantunflas, comodas, suaves, sostenible">
     <title>Sobre Nosotros</title>
+    <link rel="icon" type="image/png" href="../assets/img/logo_img.png">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
     <header class="bg-light flex-shrink-0">
-        <nav class="navbar fixed-top navbar-expand-lg navegador">
-            <div class="container-fluid">
-                <a class="navbar-brand logo" href="#">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJlJMX9lurbynhcPqg2OjatNxA9mADuXbcNw&s"
-                        alt="logo empresa">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid navegador">
+                <a class="navbar-brand logo" href="../index.html">
+                    <img src="../assets/img/logo_img.png" alt="logo empresa">
                 </a>
+
+                <a class="navbar_carrito" href="./carrito.html"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
                 <!-- Boton hamburguesa -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- Cuerpo offcanvas -->
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
 
                     <div class="offcanvas-header">
                         <h3 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-theme="dark"
+                            aria-label="Close"></button>
                     </div>
 
                     <div class="offcanvas-body encabezado-offcanvas">
@@ -41,8 +45,10 @@
                             <li class="nav-item"><a class="nav-link active" href="#">SOBRE NOSOTROS</a></li>
                             <li class="nav-item"><a class="nav-link" href="./productos.html">PRODUCTOS</a></li>
                             <li class="nav-item"><a class="nav-link" href="./contactanos.html">CONTÁCTANOS</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./carrito.html"><i
-                                        class="fa-solid fa-cart-shopping"></i> CARRITO</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link carrito_text" href="./carrito.html"><i
+                                        class="fa-solid fa-cart-shopping"></i> CARRITO</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -57,65 +63,60 @@
         <section class="sobre_nosotros">
             <div class="intro">
                 <p>
-                    Quidam alii sunt, et non est in nostra potestate. Quae omnia in nostra sententia, pursuit,
-                    cupiditatem, aversatio, ex quibus in Verbo, quicquid non suis actibus nostris. Non sunt in nostra
-                    potestate corpore bona fama imperii, denique quod non sunt actus.
+                    <span><span id="empresa-1">Dormir</span> <span id="empresa-2">con Estilo</span></span> es una
+                    empresa que se dedica a diseñar y vender ropa para dormir, la cual se caracteriza por ser
+                    especialmente cómoda y divertida para toda la familia
                     <br>
-                    Et omnia in potestate nostra esse natura liber, libera, libere valeant; sed illis non est in nostra
-                    potestate sunt infirmi, servilis, licet, lex pertinet.
+                    Nuestro objetivo es dar la mejor experiencia al dormir, por medio de nuestros productos y así puedas
+                    despertar con una sonrisa en el rostro.
                     <br>
-                    Tenete ergo quod si servitus quae natura liber, et aliena tua tunc impeditur. Dolebis, et
-                    turbabuntur, et invenietis, cum culpa tam dis hominibusque. Quod si tibi tantum sit propria et
-                    aliena quale sit, nemo unquam vel invitum te continebis.
+                    Creemos que la ropa para dormir debe ser más que solo funcional, debe ser una forma de expresarte y
+                    sentirte bien contigo mismo cuando vas a descansar.
+
                 </p>
             </div>
             <hr>
-            <div class="row info m-4 p-3">
-                <img data-aos="fade-up" class="col-12 col-md-4" 
-                    src="https://img.freepik.com/vector-gratis/ilustracion-vector-concepto-abstracto-conflicto-social-relaciones-sociales-poder-interaccion-conflicto-clases-gente-enojada-multirracial-acoso-escolar-abuso-metafora-abstracta-agresiva_335657-1425.jpg?semt=ais_hybrid&w=740"
-                    alt="imagen de principios">
-                
-                <div class="col-12 col-md-8">
-                    <h2>NUESTROS PRINCIPIOS</h2>
+            <div class="container-principios info">
+                <h2 class="title">NUESTROS PRINCIPIOS</h2>
+                <div class="img_nosotros">
+                    <img data-aos="zoom-in-right" src="../assets/img/principios.png"
+                        alt="imagen de principios de la empresa">
+                </div>
+
+
+                <div class="text">
+
                     <p>
-                        Quidam alii sunt, et non est in nostra potestate. Quae omnia in nostra sententia, pursuit,
-                        cupiditatem, aversatio, ex quibus in Verbo, quicquid non suis actibus nostris. Non sunt in
-                        nostra potestate corpore bona fama imperii, denique quod non sunt actus.
+                        Nos esforzamos por ofrecer productos de alta calidad que duren en el tiempo.
+                        <br>
+                        Nuestras pijamas y pantuflas están diseñadas para ser cómodas y suaves al tacto.
+                        <br>
+                        Nos comprometemos a reducir nuestro impacto ambiental y a utilizar materiales sostenibles en
+                        nuestros productos.
                     </p>
-                    <p>
-                        Et omnia in potestate nostra esse natura liber, libera, libere valeant; sed illis non est in
-                        nostra potestate sunt infirmi, servilis, licet, lex pertinet.
-                    </p>
-                    <p>
-                        Tenete ergo quod si servitus quae natura liber, et aliena tua tunc impeditur. Dolebis, et
-                        turbabuntur, et invenietis, cum culpa tam dis hominibusque. Quod si tibi tantum sit propria et
-                        aliena quale sit, nemo unquam vel invitum te continebis.
-                    </p>
+
                 </div>
 
             </div>
             <hr>
-            <div class="row info m-4 p-3">
-                <div class="col-12 col-md-8">
-                    <h2>NUESTRO EQUIPO</h2>
-                    <p>
-                        Quidam alii sunt, et non est in nostra potestate. Quae omnia in nostra sententia, pursuit,
-                        cupiditatem, aversatio, ex quibus in Verbo, quicquid non suis actibus nostris. Non sunt in
-                        nostra potestate corpore bona fama imperii, denique quod non sunt actus.
-                    </p>
-                    <p>
-                        Et omnia in potestate nostra esse natura liber, libera, libere valeant; sed illis non est in
-                        nostra potestate sunt infirmi, servilis, licet, lex pertinet.
-                    </p>
-                    <p>
-                        Tenete ergo quod si servitus quae natura liber, et aliena tua tunc impeditur. Dolebis, et
-                        turbabuntur, et invenietis, cum culpa tam dis hominibusque. Quod si tibi tantum sit propria et
-                        aliena quale sit, nemo unquam vel invitum te continebis.
-                    </p>
+            <div class="container-equipo info">
+                <h2 class="title">NUESTRO EQUIPO</h2>
+                <div class="img_nosotros">
+                    <img data-aos="zoom-in-left" src="../assets/img/equipo.png" alt="imagen del equipo">
                 </div>
-                <img data-aos="fade-up" class="col-12 col-md-4"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN8bbs78mRyaVZSQegLz-xHVxd86F5mW8sZQ&s"
-                    alt="imagen del equipo">
+
+                <div class="text">
+                    <p>
+                        Nuestro equipo está formado por diseñadores, productores y vendedores apasionados que comparten
+                        la misma visión: ayudarte a dormir mejor y despertar con una sonrisa.
+                        <br>
+                        Estamos comprometidos con la calidad y la comodidad de nuestros productos, y nos esforzamos por
+                        ofrecer un servicio al cliente excepcional.
+
+                    </p>
+
+                </div>
+
             </div>
 
         </section>
@@ -138,6 +139,7 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <!-- aos script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
