agrega imagen de carrito vacio

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -64,7 +64,7 @@
         <section id="carrito">
             <div class="vacio">
                 <div class="text-center">
-                    <img src="https://cdn-icons-png.flaticon.com/512/11010/11010851.png" alt="carrito vacio"
+                    <img src="../assets/img/carrito_vacio.png" alt="carrito vacio"
                         class="rounded">
                 </div>
 
