--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -66,7 +66,7 @@
     </section>
 
     <section class="contactanos_formulario">
-      <form class="row g-3 needs-validation" action="#" method="post" enctype="application/x-www-form-urlencoded">
+      <form class="row g-3 needs-validation" action="https://formsubmit.co/adriana_13_19@hotmail.com" method="post" enctype="application/x-www-form-urlencoded">
         <div class="mb-1">
           <label class="form-label" for="nombre_completo">Nombre completo</label>
           <input class="form-control" type="text" name="nombre_completo" id="nombre_completo" />
