modificacione de configuraciones ocultas form

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -84,7 +84,7 @@
           <button type="submit" class="btn btn-primary boton">Enviar</button>
         </div>
         <!-- Configuraciones ocultas -->
-        <input type="hidden" name="_next" value="#">
+        <input type="hidden" name="_next" value="./contactanos.html">
       </form>
     </section>
   </main>
